--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,18 @@
 html,
 body {
   font-family: "Poppins", sans-serif;
-  width: 450px;
-  height: 550px;
+  /* width: 100%; */
+  /* height: 100%; */
+  width: 600px;
+  height: 600px;
   display: flex;
   justify-content: center; /* horizontally center */
   align-items: center; /* vertically center */
   margin: 0; /* remove default margin */
+  color: rgb(64, 62, 62);
 }
 body{
-  background: linear-gradient(to bottom right, #3498db, #edb4c7);
+  background: #3c62a2;
   background-repeat: no-repeat;
 
 }
